# sonarigo

./: AUTHORS  Cargo.toml  README.md  install_lv2.sh
sonariga-jack/: Cargo.toml
sonarigo-jack/: Cargo.toml
sonarigo-jack/src/: main.rs
sonarigo-lv2/: Cargo.toml
sonarigo-lv2/lv2/: manifest.ttl  sonarigo.ttl
sonarigo-lv2/src/: lib.rs  lv2_stuff.rs  patch.rs
soundfonts/: Cargo.toml
soundfonts/assets/: README  gmidi-grand-piano-C4.flac  samplerate-shift-test.sfz  simple-test-instrument.sfz  sine-440Hz-44100sr.flac  sine-440Hz-48000sr.flac  test-instrument.sfz
soundfonts/src/: envelopes.rs  errors.rs  lib.rs  sample.rs  utils.rs
soundfonts/src/sfz/: engine.rs  mod.rs  parser.rs
src/: adsr_eg.rs  engine.rs  errors.rs  lib.rs  sample.rs  utils.rs
src/sfz/: engine.rs  errors.rs  mod.rs  parser.rs
